language 설정, scaffolds.css수정

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,18 +18,17 @@ pre {
   font-size: 11px;
 }
 
-a {
-  color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
+// a {
+//   color: #000;
+//
+//   &:visited {
+//     color: #fff;
+//   }
+//
+//   &:hover {
+//     color: #fff;
+//   }
+// }
 
 div {
   &.field, &.actions {
