--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
     <p class="card-text"> <%= post.user.email %> </p>
     <p class="card-text"><%= post.content.html_safe %></p>
 
-    <%= link_to '글보기', post, class: "btn btn-primary" %>
+    <%= link_to '글보기', post, class: "btn btn-primary mt-3" %>
   </div>
 </div>
 <% end %>
