--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
   <%= link_to '회원가입', new_user_registration_path %>
 <% end %>
 <!-- nav bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav   class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+
  <a class="navbar-brand" href="#">Planet☆</a>
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
