--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,17 +18,18 @@ pre {
   font-size: 11px;
 }
 
-// a {
-//   color: #000;
-//
-//   &:visited {
-//     color: #fff;
-//   }
-//
-//   &:hover {
-//     color: #fff;
-//   }
-// }
+a {
+  color: #000;
+
+  &:visited {
+    color: #666;
+  }
+
+  &:hover {
+    color: #fff;
+    background-color: #000;
+  }
+}
 
 div {
   &.field, &.actions {
