--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,4 +1,4 @@
-var parent = $('a[href="/comments/<%= params[:comment_id] %>"]').parent(); //p tag
+var parent = $('a[href="/comments/<%= params[:id] %>"]').parent(); //p tag
 var hr = parent.next();
 parent.remove();
 hr.remove();
