--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<h3>내 Planet 만들기 ☆</h3>
+<h3>Planet 만들기... ☆</h3>
 <%= render 'form' %>
 <!-- <form action="/posts" method="post">
   <input type="text" name="title" /> <br />
