--- a/app/views/posts_tags/_form.html.erb
+++ b/app/views/posts_tags/_form.html.erb
@@ -1,12 +1,11 @@
 
-<%= simple_form_for(@tag) do |f| %>
+<%= simple_form_for(@posts_tag) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :tag_id %>
-    <%= f.input :content %>
-    <%= f.association :project %>
+    <%= f.association :post %>
+    <%= f.association :tag %>
   </div>
 
   <div class="form-actions">
