--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+ .card {
+   width: 18rem;
+   border-radius: 0;
+ }
+ #banner {
+   height: 150px;
+ }
+ #logo {
+   font-family: 'Kaushan Script', cursive;
+ }
+
+ .profile-img{
+   width: 50px;
+   height: 50px;
+ }
+ .card-img-top {
+     width: 100%;
+     height: 15vw;
+     object-fit: cover;
+ }
+
+ .top_img{
+   object-fit: cover;
+ }
+ /* Bottom left text */
+ .bottom-left {
+     position: absolute;
+     bottom: 8px;
+     left: 16px;
+ }
