--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -72,16 +72,14 @@ div {
     list-style: square;
   }
 }
-#banner {
-  height: 150px;
+
+
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
 }
-#logo {
-  font-family: 'Kaushan Script', cursive;
-}
-.profile-img{
-  width: 50px;
-  height: 50px;
-}
+
 
 // ****font****
 @font-face { font-family: 'NanumSquareRound'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff'); font-weight: normal; font-style: normal; }
