--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,17 +49,15 @@
 
 
 <!-- nav bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
-   <a class="navbar-brand" href="#">Navbar</a>
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-     <span class="navbar-toggler-icon"></span>
-   </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light row">
    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
      <div class="navbar-nav">
-       <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-       <a class="nav-item nav-link" href="#">Features</a>
-       <a class="nav-item nav-link" href="#">Pricing</a>
-       <a class="nav-item nav-link disabled" href="#">Disabled</a>
+       <a class="navbar-brand col" href="#">홈으로</a>
+       <a class="nav-item nav-link" href="#">플래닛개설하기</a>
+       <a class="nav-item nav-link" href="#">공구둘러보기</a>
+       <a class="nav-item nav-link" href="#">서포트둘러보기</a>
+       <a class="nav-item nav-link" href="#">랭킹보기</a>
+       <a class="nav-item nav-link" href="#">마이페이지</a>
      </div>
    </div>
 </nav>
