--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,20 @@
 
-<div class="row my-5">
+<div class="row my-1 top_div">
+  <div class="col top_img">
+    <%= image_tag @posts.find(1).img.thumb_fill.url, style: "width: 100%"%>
+    <div class="bottom-left">Bottom Left</div>
+  </div>
+  <div class="col top_img">
+    <%= image_tag @posts.find(1).img.thumb_fill.url, style: "width: 100%"%>
+    <div class="bottom-left">Bottom Left</div>
+  </div>
+</div>
+
+<div class="row">
 <% @posts.each do |post| %>
-<div class="card col-lg-3 col-md-4 col-sm-6" style="width: 18rem;">
-  <%= image_tag post.img.thumb_fill.url, class: "card-img-top"  %>
+
+<div class="card col-lg-3 col-md-4 col-sm-6">
+  <%= image_tag post.img.thumb_fit.url, class: "card-img-top"  %>
   <div class="card-body text-center">
     <div class="progress" style="height: 3px;">
       <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -24,6 +36,8 @@
     <%= link_to '글보기', post, class: "btn btn-primary mt-3" %>
   </div>
 </div>
+
+
 <% end %>
 </div>
 <div class="text-center mt-3">
