--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,15 @@
  *= require_tree .
  *= require_self
  */
+.navbar-collapse{
+  border-top: 1px solid #b3b3b3
+}
+.nav-item{
+   border-bottom: 3px solid #ffffff;
+ }
+.nav-item:hover{
+  border-bottom: 3px solid #99ffcc;
+}
 
  .card {
    width: 18rem;
