--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,21 +10,21 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <%= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
+        <%#= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
         <div class="carousel-caption d-none d-md-block">
            <h5>랭킹 1위</h5>
            <p>#태그#태그#태그#태그#태그#태그</p>
         </div>
       </div>
       <div class="carousel-item">
-        <%= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
+        <%#= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
         <div class="carousel-caption d-none d-md-block">
            <h5>랭킹 1위</h5>
            <p>#태그#태그#태그#태그#태그#태그</p>
         </div>
       </div>
       <div class="carousel-item">
-        <%= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
+        <%#= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
         <div class="carousel-caption d-none d-md-block">
            <h5>랭킹 1위</h5>
            <p>#태그#태그#태그#태그#태그#태그</p>
@@ -48,21 +48,21 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <%= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
+        <%#= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
         <div class="carousel-caption d-none d-md-block">
            <h5>랭킹 1위</h5>
            <p>#태그#태그#태그#태그#태그#태그</p>
         </div>
       </div>
       <div class="carousel-item">
-        <%= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
+        <%#= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
         <div class="carousel-caption d-none d-md-block">
            <h5>랭킹 1위</h5>
            <p>#태그#태그#태그#태그#태그#태그</p>
         </div>
       </div>
       <div class="carousel-item">
-        <%= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
+        <%#= image_tag @posts.first.img.thumb_fill.url, class: "d-block w-100" %>
         <div class="carousel-caption d-none d-md-block">
            <h5>랭킹 1위</h5>
            <p>#태그#태그#태그#태그#태그#태그</p>
