tag gem 사용하여 태그달기 완료

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <%= f.input :content, class: "editor", rows:40, cols: 120 %>
-
+  <%= f.input :tag_list_fixed, placeholder: '태그는 ,로 구분해주세요'%>
 
   <%#= simple_fields_for :tags do |t| %>
   <%#= simple_fields_for :tags do |t| %>
