--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,14 @@
 <%= @post.id %>번째 글
 <%= @post.title %>
 <%= @post.content.html_safe %>
-<% @post.tags.each do |t| %>
-  <%=t.content%>
-<%end%>
+<tr>
+  <%= tag_icons @post.tag_list%>
+</tr>
+
+
+<%# @post.tags.each do |t| %>
+  <%#=t.content%>
+<%#end%>
 <!-- 글이 아래로 내려감 -->
 <%=image_tag @post.img%>
 <%=image_tag @post.img.thumb_fit.url %>
