--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
        <%= link_to '플래닛개설하기', new_post_path, class: "nav-item nav-link" %>
        <a class="nav-item nav-link" href="#">공구둘러보기</a>
        <a class="nav-item nav-link" href="#">서포트둘러보기</a>
-       <a class="nav-item nav-link" href="#">랭킹보기</a>
+       <a class="nav-item nav-link" href="posts/rank">랭킹보기</a>
        <a class="nav-item nav-link" href="#">마이페이지</a>
      </div>
    </div>
