card, 공구둘러보기 수정

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,8 @@
      <div class="navbar-nav">
        <%= link_to '홈으로', root_path	, class: "nav-item nav-link" %>
        <%= link_to '플래닛개설하기', new_post_path, class: "nav-item nav-link" %>
-       <a class="nav-item nav-link" href="#">공구둘러보기</a>
+       <%= link_to '공구둘러보기', '/posts/group', class: "nav-item nav-link" %>
+       <!-- <a class="nav-item nav-link" href="#">공구둘러보기</a> -->
        <a class="nav-item nav-link" href="#">서포트둘러보기</a>
        <a class="nav-item nav-link" href="#">랭킹보기</a>
        <a class="nav-item nav-link" href="#">마이페이지</a>
