--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,18 +18,18 @@ pre {
   font-size: 11px;
 }
 
-// a {
-//   color: #000;
-//
-//   &:visited {
-//     color: #666;
-//   }
-//
-//   &:hover {
-//     color: #fff;
-//     background-color: #000;
-//   }
-// }
+a {
+  color: #000;
+
+  &:visited {
+    color: #666;
+  }
+
+  &:hover {
+    color: #fff;
+    background-color: #000;
+  }
+}
 
 div {
   &.field, &.actions {
@@ -71,13 +71,3 @@ div {
     list-style: square;
   }
 }
-
-.card-img-top {
-    width: 100%;
-    height: 15vw;
-    object-fit: cover;
-}
-
-
-// ****font****
-@font-face { font-family: 'NanumSquareRound'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff'); font-weight: normal; font-style: normal; }
