--- a/app/views/posts/rank.html.erb
+++ b/app/views/posts/rank.html.erb
@@ -22,7 +22,7 @@
   </li>
 </ul> -->
 <div class="text-center" style="width: 90%;">
-  <h5>Ranking Top10 In This Month</h5>
+  <h5>Ranking Top10 In This Week</h5>
 </div>
 
 <div class="card text-center" style="width: 90%;">
@@ -31,7 +31,11 @@
   </div>
   <div class="card-body" >
 
-  <% (1..10).each_with_index do |ranklist, idx|%>
+  <%# rankl= Dummyrank.rankname%>
+  <%#rankc= Dummyrank.content%>
+  <%# rankurl= Dummyrank.url%>
+
+  <% @rank.each_with_index do |rank ,idx|%>
     <!-- 여기서 부터 -->
     <div class="card" style="width:100%;">
       <ul class="list-center" style="margin-top:16px">
@@ -40,12 +44,13 @@
         <!-- controller에서 넘길때 상위10개만뽑아서 넘겨야한당 -->
         <li class="media" >
           <div class="row" style="width:100%;">
-            <div style="vertical-align:middle; width: 190px; margin-top: 100px ;"><h4><%=idx +1%>위</h4></div>
+            <div style="vertical-align:middle; width: 190px; margin-top: 80px ;"><h4><%=idx +1%>위</h4></div>
             <!-- <div class="col-sm"><img class="mr-3" src="/app/assets/images/redvelvet.jpg/64x64" alt="Generic placeholder image"></div> -->
-             <div class="col-sm" style="width:64px; height: 90%; margin-top:3px"><%= image_tag ("wanna.jpg"), class: "d-block w-100" %></div>
-            <div class="col-sm align-middle" style=" margin-top: 80px;">
-              <h5>#EXO</h5></br>
-              <h6>#카이 #1위축하</h6>
+             <div class="col-sm" style="width:64px; height: 90%; margin-top:3px"><%= image_tag (rank.url), :size => "260x180" %></div>
+            <div class="col-sm align-middle" style=" margin-top: 55px;">
+              <h5>#<%=rank.rankname%></h5></br>
+              참여자투표 28,560,048
+              <h6><%=rank.content%></h6>
             </div>
           </div>
         </li>
@@ -56,7 +61,7 @@
 
   </div>
   <div class="card-footer text-muted">
-    2 days ago
+     2주차 랭킹은 3일 후 업데이트 됩니다
   </div>
 </div>
 
