--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+*{
+  font-family: 'WONDotum';
+}
+
 .navbar-collapse{
   border-top: 1px solid #b3b3b3
 }
@@ -87,3 +92,6 @@
      bottom: 8px;
      left: 16px;
  }
+
+ @font-face { font-family: 'NanumSquareRound'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff') format('woff'); font-weight: normal; font-style: normal; }
+@font-face { font-family: 'WONDotum'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/WONDotum.woff') format('woff'); font-weight: normal; font-style: normal; }
