--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
         <h1 id = "logo">Planet09</h1>
       </div>
       <!-- <div class="col-6 my-auto d-flex justify-content-center"> -->
-        <form class="form-inline row col-5">
-            <input class="form-control mr-sm-2 col" type="search" placeholder="Search" aria-label="Search" name="search">
-            <button class="btn btn-outline-dark my-2 my-sm-0 col-2" type="submit">Search</button>
+        <form class="form-inline row col-5 justify-content-center">
+            <input class="form-control mr-2 col-8" type="search" placeholder="Search" aria-label="Search" name="search">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
         </form>
       <!-- </div> -->
       <div class="col my-auto text-center">
