post/show.html.erb 개수에 따른 총 금액  수정중

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,6 +21,10 @@
           <td><%= @post.description %></td>
         </tr>
         <tr>
+          <td>가격</td>
+          <td id="price-<%= @post.id %>"><%= @post.price %> 원</td>
+        </tr>
+        <tr>
           <td>계좌번호</td>
           <td><%= @post.account %></td>
         </tr>
@@ -48,6 +52,9 @@
       <div class="select_option">
 
       </div>
+      <!-- <div >
+        <p class="total_price">0</p>
+      </div> -->
 
     <div class="text-center my-5">
       <input type="submit" class= "btn btn-warning" value="주문하기">
@@ -100,8 +107,13 @@
 <script>
 
   $('#options').change(function(){
-      $('.select_option').append('옵션선택: ' + this.value + ' <br /> <input type="number" value="1"/> <hr />');
+      $('.select_option').append(`옵션선택:  ${this.value} <br /> <input type="number" class="quantity" value="1"/> <hr />`);
   });
+
+  // $('.quantity').change(function(data){
+  //   var total_price = data.price * $('.quantity').val();
+  //   $('.total_price').text(`${total_price}`);
+  // })
 
   $('form').on('ajax:success', function() {
     $('input[name="content"]').val('');
