--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,8 +16,9 @@
     <div class="col">  <%= f.input :end_date, as: :date, start_year: Date.today.year,
                                 order: [:year, :month, :day] %></div>
   </div>
+  <%= f.input :price %>
   <%= f.input :account %>
-  <%= f.input :option placeholder: '옵션은 /로 구분해주세요'%>
+  <%= f.input :option, placeholder: '옵션은 /로 구분해주세요'%>
 
   <%= f.input :content, class: "editor", rows:40, cols: 120 %>
   <%= f.input :tag_list_fixed, placeholder: '태그는 ,로 구분해주세요'%>
